feat(doc): update swagger doc
