# docs/swagger.json
@@ -207,7 +207,19 @@
                     "200": {
                         "description": "获取应用状态成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.CommonResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.CommonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.AdminStatusResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -325,7 +337,19 @@
                     "200": {
                         "description": "获取地点详情成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.CommonResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.CommonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.LocationDto"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -385,7 +409,22 @@
                     "200": {
                         "description": "获取地点评论列表成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.CommonResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.CommonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/dto.CommentDto"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -456,7 +495,22 @@
                     "200": {
                         "description": "获取指定地点列表成功",
                         "schema": {
-                            "$ref": "#/definitions/dto.CommonResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.CommonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/dto.LocationDto"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -752,6 +806,24 @@
                     }
                 },
                 "page_size": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.AdminStatusResponse": {
+            "description": "管理员状态响应结构体",
+            "type": "object",
+            "properties": {
+                "current_dinner": {
+                    "type": "integer"
+                },
+                "total_dinner": {
+                    "type": "integer"
+                },
+                "total_location": {
+                    "type": "integer"
+                },
+                "total_user": {
                     "type": "integer"
                 }
             }
